--- a/Report1.ipynb
+++ b/Report1.ipynb
@@ -31,104 +31,6 @@
    "outputs": [
     {
      "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "mpg",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "cylinders",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "displacement",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "horsepower",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "weight",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "acceleration",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "model_year",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "origin",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "name",
-         "rawType": "object",
-         "type": "string"
-        }
-       ],
-       "conversionMethod": "pd.DataFrame",
-       "ref": "5b41dccd-09b2-4ecc-89be-bf4227e90ae2",
-       "rows": [
-        [
-         "0",
-         "18.0",
-         "8",
-         "307.0",
-         "130.0",
-         "3504",
-         "12.0",
-         "70",
-         "usa",
-         "chevrolet chevelle malibu"
-        ],
-        [
-         "1",
-         "15.0",
-         "8",
-         "350.0",
-         "165.0",
-         "3693",
-         "11.5",
-         "70",
-         "usa",
-         "buick skylark 320"
-        ],
-        [
-         "2",
-         "18.0",
-         "8",
-         "318.0",
-         "150.0",
-         "3436",
-         "11.0",
-         "70",
-         "usa",
-         "plymouth satellite"
-        ]
-       ],
-       "shape": {
-        "columns": 9,
-        "rows": 3
-       }
-      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -249,11 +151,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    mpg  horsepower\n",
+      "0  18.0       130.0\n",
+      "1  15.0       165.0\n",
+      "2  18.0       150.0\n",
+      "3  16.0       150.0\n",
+      "4  17.0       140.0\n"
+     ]
+    }
+   ],
    "source": [
-    "some code "
+    "cars_selected = cars>> select(X.mpg, X.horsepower)\n",
+    "print(cars_selected.head())"
    ]
   },
   {
