--- a/Report1.ipynb
+++ b/Report1.ipynb
@@ -663,11 +663,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>307.0</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>3504</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>chevrolet chevelle malibu</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>3693</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>buick skylark 320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>318.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>3436</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>plymouth satellite</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    mpg  cylinders  displacement  horsepower  weight  acceleration  \\\n",
+       "0  18.0          8         307.0       130.0    3504          12.0   \n",
+       "1  15.0          8         350.0       165.0    3693          11.5   \n",
+       "2  18.0          8         318.0       150.0    3436          11.0   \n",
+       "\n",
+       "   model_year origin                       name  \n",
+       "0          70    usa  chevrolet chevelle malibu  \n",
+       "1          70    usa          buick skylark 320  \n",
+       "2          70    usa         plymouth satellite  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your solution goes here"
+    "cars >> row_slice([0,1,2])"
    ]
   },
   {
@@ -685,11 +775,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>307.0</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>3504</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>chevrolet chevelle malibu</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>24.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>113.0</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>2372</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>japan</td>\n",
+       "      <td>toyota corona mark ii</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>26.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>1835</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>volkswagen 1131 deluxe sedan</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     mpg  cylinders  displacement  horsepower  weight  acceleration  \\\n",
+       "0   18.0          8         307.0       130.0    3504          12.0   \n",
+       "14  24.0          4         113.0        95.0    2372          15.0   \n",
+       "19  26.0          4          97.0        46.0    1835          20.5   \n",
+       "\n",
+       "    model_year  origin                          name  \n",
+       "0           70     usa     chevrolet chevelle malibu  \n",
+       "14          70   japan         toyota corona mark ii  \n",
+       "19          70  europe  volkswagen 1131 deluxe sedan  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your solution goes here"
+    "cars >> distinct(X.origin)"
    ]
   },
   {
@@ -707,11 +887,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>24.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>113.0</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>2372</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>japan</td>\n",
+       "      <td>toyota corona mark ii</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>198.0</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>2833</td>\n",
+       "      <td>15.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>plymouth duster</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>21.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>2587</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>ford maverick</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     mpg  cylinders  displacement  horsepower  weight  acceleration  \\\n",
+       "14  24.0          4         113.0        95.0    2372          15.0   \n",
+       "15  22.0          6         198.0        95.0    2833          15.5   \n",
+       "17  21.0          6         200.0        85.0    2587          16.0   \n",
+       "\n",
+       "    model_year origin                   name  \n",
+       "14          70  japan  toyota corona mark ii  \n",
+       "15          70    usa        plymouth duster  \n",
+       "17          70    usa          ford maverick  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your solution goes here"
+    "cars >> mask((X.mpg >20 ) | (X.origin == \"Japan\")) >> head(3)"
    ]
   },
   {
@@ -731,10 +1001,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# your solution goes here"
-   ]
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'bool' object has no attribute 'dtype'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[35]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mcars\u001b[49m\u001b[43m \u001b[49m\u001b[43m>>\u001b[49m\u001b[43m \u001b[49m\u001b[43mmask\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43morigin\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m==\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mJapan\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[43m&\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mmodel_year\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m==\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m70\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m >>pull(\u001b[33m\"\u001b[39m\u001b[33mmpg\u001b[39m\u001b[33m\"\u001b[39m) >> head(\u001b[32m3\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\barte\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\dfply\\base.py:142\u001b[39m, in \u001b[36mpipe.__rrshift__\u001b[39m\u001b[34m(self, other)\u001b[39m\n\u001b[32m    139\u001b[39m     warnings.simplefilter(\u001b[33m\"\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    140\u001b[39m     other_copy._grouped_by = \u001b[38;5;28mgetattr\u001b[39m(other, \u001b[33m'\u001b[39m\u001b[33m_grouped_by\u001b[39m\u001b[33m'\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[32m--> \u001b[39m\u001b[32m142\u001b[39m result = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mfunction\u001b[49m\u001b[43m(\u001b[49m\u001b[43mother_copy\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    144\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m p \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m.chained_pipes:\n\u001b[32m    145\u001b[39m     result = p.\u001b[34m__rrshift__\u001b[39m(result)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\barte\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\dfply\\base.py:149\u001b[39m, in \u001b[36mpipe.__call__.<locals>.<lambda>\u001b[39m\u001b[34m(x)\u001b[39m\n\u001b[32m    148\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__call__\u001b[39m(\u001b[38;5;28mself\u001b[39m, *args, **kwargs):\n\u001b[32m--> \u001b[39m\u001b[32m149\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m pipe(\u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mfunction\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\barte\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\dfply\\base.py:329\u001b[39m, in \u001b[36mgroup_delegation.__call__\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m    327\u001b[39m grouped_by = \u001b[38;5;28mgetattr\u001b[39m(args[\u001b[32m0\u001b[39m], \u001b[33m'\u001b[39m\u001b[33m_grouped_by\u001b[39m\u001b[33m'\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[32m    328\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m (grouped_by \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mall\u001b[39m([g \u001b[38;5;129;01min\u001b[39;00m args[\u001b[32m0\u001b[39m].columns \u001b[38;5;28;01mfor\u001b[39;00m g \u001b[38;5;129;01min\u001b[39;00m grouped_by]):\n\u001b[32m--> \u001b[39m\u001b[32m329\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mfunction\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    330\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    331\u001b[39m     applied = \u001b[38;5;28mself\u001b[39m._apply(args[\u001b[32m0\u001b[39m], *args[\u001b[32m1\u001b[39m:], **kwargs)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\barte\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\dfply\\base.py:282\u001b[39m, in \u001b[36mIntentionEvaluator.__call__\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m    279\u001b[39m args = \u001b[38;5;28mself\u001b[39m._recursive_arg_eval(df, args[\u001b[32m1\u001b[39m:])\n\u001b[32m    280\u001b[39m kwargs = \u001b[38;5;28mself\u001b[39m._recursive_kwarg_eval(df, kwargs)\n\u001b[32m--> \u001b[39m\u001b[32m282\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mfunction\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\barte\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\dfply\\subset.py:62\u001b[39m, in \u001b[36mmask\u001b[39m\u001b[34m(df, *args)\u001b[39m\n\u001b[32m     60\u001b[39m mask = pd.Series(np.ones(df.shape[\u001b[32m0\u001b[39m], dtype=\u001b[38;5;28mbool\u001b[39m))\n\u001b[32m     61\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m arg \u001b[38;5;129;01min\u001b[39;00m args:\n\u001b[32m---> \u001b[39m\u001b[32m62\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43marg\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdtype\u001b[49m != \u001b[38;5;28mbool\u001b[39m:\n\u001b[32m     63\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mArguments must be boolean.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     64\u001b[39m     mask = mask & arg.reset_index(drop=\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'bool' object has no attribute 'dtype'"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
