--- a/Exercise 3.ipynb
+++ b/Exercise 3.ipynb
@@ -27,10 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "from dfply import *"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -48,10 +52,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>beer_servings</th>\n",
+       "      <th>spirit_servings</th>\n",
+       "      <th>wine_servings</th>\n",
+       "      <th>total_litres_of_pure_alcohol</th>\n",
+       "      <th>continent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>AS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>89</td>\n",
+       "      <td>132</td>\n",
+       "      <td>54</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>EU</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>AF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>245</td>\n",
+       "      <td>138</td>\n",
+       "      <td>312</td>\n",
+       "      <td>12.4</td>\n",
+       "      <td>EU</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>217</td>\n",
+       "      <td>57</td>\n",
+       "      <td>45</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>AF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Antigua &amp; Barbuda</td>\n",
+       "      <td>102</td>\n",
+       "      <td>128</td>\n",
+       "      <td>45</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>193</td>\n",
+       "      <td>25</td>\n",
+       "      <td>221</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>SA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Armenia</td>\n",
+       "      <td>21</td>\n",
+       "      <td>179</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>EU</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>261</td>\n",
+       "      <td>72</td>\n",
+       "      <td>212</td>\n",
+       "      <td>10.4</td>\n",
+       "      <td>OC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Austria</td>\n",
+       "      <td>279</td>\n",
+       "      <td>75</td>\n",
+       "      <td>191</td>\n",
+       "      <td>9.7</td>\n",
+       "      <td>EU</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             country  beer_servings  spirit_servings  wine_servings  \\\n",
+       "0        Afghanistan              0                0              0   \n",
+       "1            Albania             89              132             54   \n",
+       "2            Algeria             25                0             14   \n",
+       "3            Andorra            245              138            312   \n",
+       "4             Angola            217               57             45   \n",
+       "5  Antigua & Barbuda            102              128             45   \n",
+       "6          Argentina            193               25            221   \n",
+       "7            Armenia             21              179             11   \n",
+       "8          Australia            261               72            212   \n",
+       "9            Austria            279               75            191   \n",
+       "\n",
+       "   total_litres_of_pure_alcohol continent  \n",
+       "0                           0.0        AS  \n",
+       "1                           4.9        EU  \n",
+       "2                           0.7        AF  \n",
+       "3                          12.4        EU  \n",
+       "4                           5.9        AF  \n",
+       "5                           4.9       NaN  \n",
+       "6                           8.3        SA  \n",
+       "7                           3.8        EU  \n",
+       "8                          10.4        OC  \n",
+       "9                           9.7        EU  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url=('https://raw.githubusercontent.com/justmarkham/DAT8/master/data/drinks.csv')\n",
+    "drinks = pd.read_csv(url)\n",
+    "drinks >>head(10)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,10 +225,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>continent</th>\n",
+       "      <th>total_beer_servings</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AF</td>\n",
+       "      <td>3258</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AS</td>\n",
+       "      <td>1630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>EU</td>\n",
+       "      <td>8720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>OC</td>\n",
+       "      <td>1435</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SA</td>\n",
+       "      <td>2101</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  continent  total_beer_servings\n",
+       "0        AF                 3258\n",
+       "1        AS                 1630\n",
+       "2        EU                 8720\n",
+       "3        OC                 1435\n",
+       "4        SA                 2101"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "drinks >>group_by('continent') >>summarize(total_beer_servings=X.beer_servings.sum()) >>arrange(desc(X.total_beer_servings)) >>head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,10 +310,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>continent</th>\n",
+       "      <th>total_wine_servings</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AF</td>\n",
+       "      <td>862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AS</td>\n",
+       "      <td>399</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>EU</td>\n",
+       "      <td>6400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>OC</td>\n",
+       "      <td>570</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SA</td>\n",
+       "      <td>749</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  continent  total_wine_servings\n",
+       "0        AF                  862\n",
+       "1        AS                  399\n",
+       "2        EU                 6400\n",
+       "3        OC                  570\n",
+       "4        SA                  749"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "drinks >> group_by('continent')>>summarize(total_wine_servings=X.wine_servings.sum())>>arrange(desc(X.total_wine_servings))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -127,21 +432,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.16"
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
