--- a/Exercise 3.ipynb
+++ b/Exercise 3.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -175,37 +175,92 @@
        "      <td>9.7</td>\n",
        "      <td>EU</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Azerbaijan</td>\n",
+       "      <td>21</td>\n",
+       "      <td>46</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>EU</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Bahamas</td>\n",
+       "      <td>122</td>\n",
+       "      <td>176</td>\n",
+       "      <td>51</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>42</td>\n",
+       "      <td>63</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>AS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>AS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Barbados</td>\n",
+       "      <td>143</td>\n",
+       "      <td>173</td>\n",
+       "      <td>36</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             country  beer_servings  spirit_servings  wine_servings  \\\n",
-       "0        Afghanistan              0                0              0   \n",
-       "1            Albania             89              132             54   \n",
-       "2            Algeria             25                0             14   \n",
-       "3            Andorra            245              138            312   \n",
-       "4             Angola            217               57             45   \n",
-       "5  Antigua & Barbuda            102              128             45   \n",
-       "6          Argentina            193               25            221   \n",
-       "7            Armenia             21              179             11   \n",
-       "8          Australia            261               72            212   \n",
-       "9            Austria            279               75            191   \n",
+       "              country  beer_servings  spirit_servings  wine_servings  \\\n",
+       "0         Afghanistan              0                0              0   \n",
+       "1             Albania             89              132             54   \n",
+       "2             Algeria             25                0             14   \n",
+       "3             Andorra            245              138            312   \n",
+       "4              Angola            217               57             45   \n",
+       "5   Antigua & Barbuda            102              128             45   \n",
+       "6           Argentina            193               25            221   \n",
+       "7             Armenia             21              179             11   \n",
+       "8           Australia            261               72            212   \n",
+       "9             Austria            279               75            191   \n",
+       "10         Azerbaijan             21               46              5   \n",
+       "11            Bahamas            122              176             51   \n",
+       "12            Bahrain             42               63              7   \n",
+       "13         Bangladesh              0                0              0   \n",
+       "14           Barbados            143              173             36   \n",
        "\n",
-       "   total_litres_of_pure_alcohol continent  \n",
-       "0                           0.0        AS  \n",
-       "1                           4.9        EU  \n",
-       "2                           0.7        AF  \n",
-       "3                          12.4        EU  \n",
-       "4                           5.9        AF  \n",
-       "5                           4.9       NaN  \n",
-       "6                           8.3        SA  \n",
-       "7                           3.8        EU  \n",
-       "8                          10.4        OC  \n",
-       "9                           9.7        EU  "
+       "    total_litres_of_pure_alcohol continent  \n",
+       "0                            0.0        AS  \n",
+       "1                            4.9        EU  \n",
+       "2                            0.7        AF  \n",
+       "3                           12.4        EU  \n",
+       "4                            5.9        AF  \n",
+       "5                            4.9       NaN  \n",
+       "6                            8.3        SA  \n",
+       "7                            3.8        EU  \n",
+       "8                           10.4        OC  \n",
+       "9                            9.7        EU  \n",
+       "10                           1.3        EU  \n",
+       "11                           6.3       NaN  \n",
+       "12                           2.0        AS  \n",
+       "13                           0.0        AS  \n",
+       "14                           6.3       NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +268,7 @@
    "source": [
     "url=('https://raw.githubusercontent.com/justmarkham/DAT8/master/data/drinks.csv')\n",
     "drinks = pd.read_csv(url)\n",
-    "drinks >>head(10)\n"
+    "drinks >>head(15)\n"
    ]
   },
   {
