--- a/Exercise 4.ipynb
+++ b/Exercise 4.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
     }
    ],
    "source": [
-    "# Define the rules as functions\n",
+    "\n",
     "def check_rules(df):\n",
     "    rules = {\n",
     "        \"CompPrice >= 0\": df[\"CompPrice\"] >= 0,\n",
@@ -308,18 +308,16 @@
     "        }\n",
     "    return rules\n",
     "\n",
-    "# Apply the rules to the dataframe\n",
     "rules = check_rules(carseats)\n",
     "\n",
     "\n",
-    "# Print the rules\n",
     "for rule, result in rules.items():\n",
     "    print(f\"{rule}: {result.all()}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +342,7 @@
     }
    ],
    "source": [
-    "# Apply the rules to the dataframe\n",
+    "\n",
     "rules = check_rules(carseats)\n",
     "violations = {rule: ~result for rule, result in rules.items()}\n",
     "violated_df = pd.DataFrame(violations)\n",
@@ -366,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +391,7 @@
    "source": [
     "\n",
     "income_median = carseats['Income'].median()\n",
-    "carseats['Income'].fillna(income_median, inplace=True)  #nwm czy dobrze \n",
+    "carseats['Income'].fillna(income_median, inplace=True)  \n",
     "\n",
     "urban_mode = carseats['Urban'].mode()[0]\n",
     "carseats['Urban'].fillna(urban_mode, inplace=True)\n",
@@ -2614,7 +2612,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here"
+    "# your code goes here\n",
+    "#done at the top of the file"
    ]
   }
  ],
