final final final final

--- a/Exercise6.ipynb
+++ b/Exercise6.ipynb
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "ea14f3b5",
    "metadata": {
     "slideshow": {
@@ -951,8 +951,7 @@
    "source": [
     "sns.lineplot(data = df_gapminder[df_gapminder['continent']=='Americas'],\n",
     "             x = 'year',\n",
-    "             y = 'gdp_cap',)\n",
-    "plt.legend(bbox_to_anchor=(1.05, 1), loc='upper left', borderaxespad=0);"
+    "             y = 'gdp_cap',)\n"
    ]
   },
   {
