--- a/Report1.ipynb
+++ b/Report1.ipynb
@@ -1976,9 +1976,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>origin</th>\n",
+       "      <th>mean_mpg</th>\n",
+       "      <th>mean_horsepower</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>europe</td>\n",
+       "      <td>27.891429</td>\n",
+       "      <td>80.558824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>japan</td>\n",
+       "      <td>30.450633</td>\n",
+       "      <td>79.835443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>usa</td>\n",
+       "      <td>20.083534</td>\n",
+       "      <td>119.048980</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   origin   mean_mpg  mean_horsepower\n",
+       "0  europe  27.891429        80.558824\n",
+       "1   japan  30.450633        79.835443\n",
+       "2     usa  20.083534       119.048980"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cars >> group_by(X.origin) >> summarize(mean_mpg = X.mpg.mean(), mean_horsepower = X.horsepower.mean()) >> head()"
    ]
@@ -1997,13 +2058,320 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>mean_mpg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>70</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>25.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>71</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>28.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>72</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>22.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>73</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>24.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>74</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>27.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>75</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>24.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>76</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>24.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>77</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>29.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>78</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>24.950000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>79</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>30.450000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>80</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>37.288889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>81</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>31.575000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>82</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>40.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>70</td>\n",
+       "      <td>japan</td>\n",
+       "      <td>25.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>71</td>\n",
+       "      <td>japan</td>\n",
+       "      <td>29.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>72</td>\n",
+       "      <td>japan</td>\n",
+       "      <td>24.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>73</td>\n",
+       "      <td>japan</td>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>74</td>\n",
+       "      <td>japan</td>\n",
+       "      <td>29.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>75</td>\n",
+       "      <td>japan</td>\n",
+       "      <td>27.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>76</td>\n",
+       "      <td>japan</td>\n",
+       "      <td>28.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>77</td>\n",
+       "      <td>japan</td>\n",
+       "      <td>27.416667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>78</td>\n",
+       "      <td>japan</td>\n",
+       "      <td>29.687500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>79</td>\n",
+       "      <td>japan</td>\n",
+       "      <td>32.950000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>80</td>\n",
+       "      <td>japan</td>\n",
+       "      <td>35.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>81</td>\n",
+       "      <td>japan</td>\n",
+       "      <td>32.958333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>82</td>\n",
+       "      <td>japan</td>\n",
+       "      <td>34.888889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>70</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>15.272727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>71</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>18.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>72</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>16.277778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>73</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>15.034483</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>74</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>18.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>75</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>17.550000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>76</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>19.431818</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>77</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>20.722222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>78</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>21.772727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>79</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>23.478261</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>80</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>25.914286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>81</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>27.530769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>82</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>29.450000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    model_year  origin   mean_mpg\n",
+       "0           70  europe  25.200000\n",
+       "1           71  europe  28.750000\n",
+       "2           72  europe  22.000000\n",
+       "3           73  europe  24.000000\n",
+       "4           74  europe  27.000000\n",
+       "5           75  europe  24.500000\n",
+       "6           76  europe  24.250000\n",
+       "7           77  europe  29.250000\n",
+       "8           78  europe  24.950000\n",
+       "9           79  europe  30.450000\n",
+       "10          80  europe  37.288889\n",
+       "11          81  europe  31.575000\n",
+       "12          82  europe  40.000000\n",
+       "13          70   japan  25.500000\n",
+       "14          71   japan  29.500000\n",
+       "15          72   japan  24.200000\n",
+       "16          73   japan  20.000000\n",
+       "17          74   japan  29.333333\n",
+       "18          75   japan  27.500000\n",
+       "19          76   japan  28.000000\n",
+       "20          77   japan  27.416667\n",
+       "21          78   japan  29.687500\n",
+       "22          79   japan  32.950000\n",
+       "23          80   japan  35.400000\n",
+       "24          81   japan  32.958333\n",
+       "25          82   japan  34.888889\n",
+       "26          70     usa  15.272727\n",
+       "27          71     usa  18.100000\n",
+       "28          72     usa  16.277778\n",
+       "29          73     usa  15.034483\n",
+       "30          74     usa  18.333333\n",
+       "31          75     usa  17.550000\n",
+       "32          76     usa  19.431818\n",
+       "33          77     usa  20.722222\n",
+       "34          78     usa  21.772727\n",
+       "35          79     usa  23.478261\n",
+       "36          80     usa  25.914286\n",
+       "37          81     usa  27.530769\n",
+       "38          82     usa  29.450000"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
