--- a/Exercise8-2.ipynb
+++ b/Exercise8-2.ipynb
@@ -903,6 +903,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bafc1307",
+   "metadata": {},
+   "source": [
+    "ANSWER: it is right-skewed, and I think that mean is going to be higher than the median as the tail on the right side will pull the mean upward"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 69,
    "id": "daceceaa",
